--- a/src/components/pages/Home/home.css
+++ b/src/components/pages/Home/home.css
@@ -27,3 +27,100 @@
     width: 400px;
   }
   
+  .main_content{
+    font-size: 1.2rem;
+    margin: 20px;
+    line-height: 2;
+  }
+  .news-section{
+    margin: 20px;
+  }
+  .news-title {
+    font-size: 32px;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 16px;
+    text-align: center;
+  }
+  .news-item {
+    margin-bottom: 20px;
+    background: white;
+    padding: 16px;
+    border-radius: 6px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    border-left: 4px solid #007bff;
+  }
+  
+  .news-heading {
+    font-size: 20px;
+    font-weight: 600;
+    color: #007bff;
+    margin-bottom: 8px;
+  }
+  
+  .news-text {
+    font-size: 16px;
+    color: #555;
+  }
+  .news-button{
+    display: block;
+    margin-top: 20px;
+    font-size: 1.2rem;
+    padding: 4px;
+    border-radius: 12px;
+    background: 1px solid gray;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .newsletter {
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin: auto;
+  }
+  
+  .newsletter-title {
+    font-size: 32px;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 16px;
+  }
+  
+  .newsletter-description {
+    font-size: 18px;
+    color: #555;
+    margin-bottom: 24px;
+  }
+  
+  .newsletter-form {
+    display: flex;
+    justify-content: between;
+    gap: 12px;
+  }
+  
+  .newsletter-input {
+    padding: 12px;
+    font-size: 16px;
+    width: 60%;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+  }
+  
+  .newsletter-button {
+    padding: 12px 20px;
+    background-color: #007bff;
+    color: white;
+    font-size: 16px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+  }
+  
+  .newsletter-button:hover {
+    background-color: #0056b3;
+  }
+  
+  .newsletter-button:focus {
+    outline: none;
+  }
+  
