--- a/src/components/pages/style/agencyDirectory.css
+++ b/src/components/pages/style/agencyDirectory.css
@@ -12,9 +12,8 @@
 }
 
  .title-section {
-  
   font-weight: bold;
-  display: flex;
+  display:flex;
   color: #007bff;  /* Blue color */
   margin-bottom: 20px;
   text-transform: uppercase; /* Makes text all caps */
@@ -22,10 +21,15 @@
   position: relative;
 }
 .directory-header h1{
+  text-align: center;
 font-size: 2.0rem;
 margin-bottom: 10px;
 }
+.directory-header p{
+  text-align: center;
+}
  .title-section img{
+  padding-bottom: 15px;
   width: 400px;
   align-self: self-start;
  }
